clusters/cosmos/apps/psuite/service-discovery.yaml
apiVersion: v1
kind: Service
metadata:
  name: psuite-discovery
  namespace: psuite
spec:
  type: ClusterIP
