clusters/cosmos/apps/psuite/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: psuite
  namespace: psuite
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: default-clusterissuer
spec:
  tls:
  - hosts:
    - psuite.cosmos.cboxlab.com
    secretName: psuite-cert
  rules:
  - host: psuite.cosmos.cboxlab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: psuite
            port:
              number: 8384
